Adwaita: fix a thinko about toolbar items spacing with margins

--- a/gtk/theme/Adwaita/_common.scss
+++ b/gtk/theme/Adwaita/_common.scss
@@ -1108,16 +1108,21 @@ combobox {
 /************
  * Toolbars *
  ************/
-toolbar {
+%toolbar {
   -GtkWidget-window-dragging: true;
-  padding: 4px 3px 3px 4px;
+  padding: 4px;
   background-color: $bg_color;
+}
+
+toolbar {
+  @extend %toolbar;
+  padding: 4px 3px 3px 4px;
   // on OSD
   .osd & { background-color: transparent; }
 
   // stand-alone OSD toolbars
   &.osd {
-    padding: 13px 12px 12px 13px;
+    padding: 13px;
     border: none;
     border-radius: 5px;
     background-color: $osd_bg_color;
@@ -1132,20 +1137,20 @@ toolbar {
   &.horizontal separator { margin: 0 7px 1px 6px; }
   &.vertical separator { margin: 6px 1px 7px 0; }
 
-  &:not(.inline-toolbar) {
+  &:not(.inline-toolbar):not(.osd) {
     switch,
     scale,
     entry,
     button {
       margin-right: 1px;
       margin-bottom: 1px;
-      }
+    }
   }
 }
 
 //searchbar, location-bar & inline-toolbar
 .inline-toolbar {
-  @extend toolbar;
+  @extend %toolbar;
   @extend %darkbar;
   border-width: 0 1px 1px;
   padding: 3px;
@@ -1154,7 +1159,7 @@ toolbar {
 
 searchbar,
 .location-bar {
-  @extend toolbar;
+  @extend %toolbar;
   @extend %darkbar;
   border-width: 0 0 1px;
   padding: 3px;
